syntax = "proto3";

package login_demo;

option go_package = ".;proto";

service JWTService {
    rpc IsRegistered(IsRegisteredRequest) returns (IsRegisteredResponse){}; // 根据id判断用户是否已经注册
    rpc Add(AddRequest) returns (AddResponse){}; //添加进数据库
    rpc Load(LoadRequest) returns (LoadResponse){} // 根据用户id加载用户完整信息
}

message IsRegisteredRequest {
    int64 id=1;
}

message IsRegisteredResponse{
    bool ok=1;
}

message AddRequest{
    int64 id=1;
    string name=2;
    repeated string tags=3;
}

message AddResponse{
    bool ok=1;
}

message LoadRequest {
    int64 id=1;
}

message LoadResponse{
    int64 id=1;
    string name=2;
    repeated string tags=3;
}